# encRobo

./: README.md
encRobo/: error.txt  my_map.pgm  my_map.yaml
encRobo/Visuals/: navigation_exec_log.txt
encRobo/src/enc/: CMakeLists.txt  package.xml
encRobo/src/enc/config/: ekf.yaml  ekf_sim.yaml  mapper_params_online_async.yaml  mapper_params_online_async_sim.yaml  nav2_params.yaml  nav2_params_sim.yaml  nav2_rviz.rviz
encRobo/src/enc/description/: lidar.xacro  robot_core.xacro  ros2_control.xacro
encRobo/src/enc/enc/: global_localization.py  odometry_publisher.py  slip_detector.py  waypoint_follower.py
encRobo/src/enc/launch/: navigation.launch.py  navigation_sim.launch.py  online_async_launch.py  robot.launch.py  rsp.launch.py  rsp_sim_launch.py  simulation.launch.py
