<?xml version="1.0"?>
<?model_format 3?>
<package format="3">
  <name>enc</name>
  <version>0.0.0</version>
  <description>Robocon R2 SLAM Package</description>
  <maintainer email="pasu@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
